--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <header>
-            <nav class="nav-bar">
-                <img src="assets/images/banner-bk.jpg" alt="">
-                <h1>A New Way To Start Business</h1>
-                <p>Lorem ipsum dolor sit amet, id nec enim autem oblique, ei dico mentium duo.</p>
-                <p>Illum iusto laoreet his te. Lorem partiendo mel ex. Ad vitae admodum voluptatum per.</p>
-                <button class="start">Get Started</button>
-            </nav>
+        <img src="assets/images/banner-bk.jpg" alt="encabezado">
+        <div class="header-content">
+            <h1>A New Way<br>To Start Business</h1>
+            <p>Lorem ipsum dolor sit amet, id nec enim autem oblique, ei dico mentium duo.</p>
+            <p>Illum iusto laoreet his te. Lorem partiendo mel ex. Ad vitae admodum voluptatum per.</p>
+            <button class="start">Get Started</button>
+        </div>
     </header>
 </body>
 </html>
