--- a/index.html
+++ b/index.html
@@ -17,5 +17,37 @@
             <button class="start">Get Started</button>
         </div>
     </header>
+    <div class="container-1">
+        <h2>Smartest protection for your site</h2>
+        <div class="container-anti-spam">
+            <img src="assets/images/smart-protect-1.jpg" alt="anti-spam">
+            <h2>Anti-spam</h2>
+            <p>Lorem ipsum dolor sit amet porro his no his deleniti.</p>
+        </div>
+        <div class="container-phishing-detect">
+            <img src="assets/images/smart-protect-2.jpg" alt="phishing-detect">
+            <h2>Phishing Detec</h2>
+            <p>Ne error antiopam usu. Sed vocen concludaturque ea.</p>
+        </div>
+        <div class="container-smart-scan">
+            <img src="assets/images/smart-protect-3.jpg" alt="smart-scan">
+            <h2>Smart Scan</h2>
+            <p>Et usum ocurreret elaboraret doctus prodesse assueverit.</p>
+        </div>
+        <h2>Take a look inside</h2>
+        <p>Te iisque labitur eos, nec sale argument scribentur no, augue disputando in vim. Erat fugit sit at, ius lorem deserunt deterruisset no.</p>
+        <button class="btn-learn">Learn More</button>
+    </div>
+    <div class="container-2">
+        <div class="img-compu">
+            <img src="assets/images/feature-1.png" alt="computer">
+        </div>
+        <div class="img-table">
+            <img src="assets/images/feature-2.png" alt="table">
+        </div>
+        <h2>Safe and reliable</h2>
+        <p>Dou suas detracto maiestatis ad, commodo lucilius invenire nec ad, eum et oratio disputationi. Falli lobortis his ad</p>
+        <button class="btn-learn2">Learn More</button>
+    </div>
 </body>
 </html>
