avance del sitio web

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
             <button class="start">Get Started</button>
         </div>
     </header>
+    <div class="section section-white">
     <div class="container-1">
-        <h2>Smartest protection for your site</h2>
+        <h1>Smartest protection for your site</h1>
         <div class="container-anti-spam">
             <img src="assets/images/smart-protect-1.jpg" alt="anti-spam">
             <h2>Anti-spam</h2>
@@ -34,11 +35,15 @@
             <h2>Smart Scan</h2>
             <p>Et usum ocurreret elaboraret doctus prodesse assueverit.</p>
         </div>
+        <div class="container-2">
         <h2>Take a look inside</h2>
         <p>Te iisque labitur eos, nec sale argument scribentur no, augue disputando in vim. Erat fugit sit at, ius lorem deserunt deterruisset no.</p>
         <button class="btn-learn">Learn More</button>
+         </div>
     </div>
-    <div class="container-2">
+</div>
+<div class="section section-green">
+    <div class="container-3">
         <div class="img-compu">
             <img src="assets/images/feature-1.png" alt="computer">
         </div>
@@ -49,5 +54,6 @@
         <p>Dou suas detracto maiestatis ad, commodo lucilius invenire nec ad, eum et oratio disputationi. Falli lobortis his ad</p>
         <button class="btn-learn2">Learn More</button>
     </div>
+</div>
 </body>
 </html>
