--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
     </header>
     <div class="section section-white">
-    <div class="container-1">
+    <div class="container-selection">
         <h1>Smartest protection for your site</h1>
         <div class="container-anti-spam">
             <img src="assets/images/smart-protect-1.jpg" alt="anti-spam">
@@ -35,15 +35,16 @@
             <h2>Smart Scan</h2>
             <p>Et usum ocurreret elaboraret doctus prodesse assueverit.</p>
         </div>
-        <div class="container-2">
-        <h2>Take a look inside</h2>
+        <div class="container-take-learn">
+        <h3>Take a look inside</h3>
         <p>Te iisque labitur eos, nec sale argument scribentur no, augue disputando in vim. Erat fugit sit at, ius lorem deserunt deterruisset no.</p>
         <button class="btn-learn">Learn More</button>
          </div>
-    </div>
+        </div>
+
 </div>
 <div class="section section-green">
-    <div class="container-3">
+    <div class="container-img">
         <div class="img-compu">
             <img src="assets/images/feature-1.png" alt="computer">
         </div>
