avance de container

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
             <button class="start">Get Started</button>
         </div>
     </header>
-    <div class="section section-white">
     <div class="container-selection">
         <h1>Smartest protection for your site</h1>
         <div class="container-anti-spam">
@@ -27,7 +26,7 @@
         </div>
         <div class="container-phishing-detect">
             <img src="assets/images/smart-protect-2.jpg" alt="phishing-detect">
-            <h2>Phishing Detec</h2>
+            <h2>Phishing Detect</h2>
             <p>Ne error antiopam usu. Sed vocen concludaturque ea.</p>
         </div>
         <div class="container-smart-scan">
@@ -35,15 +34,13 @@
             <h2>Smart Scan</h2>
             <p>Et usum ocurreret elaboraret doctus prodesse assueverit.</p>
         </div>
-        <div class="container-take-learn">
+    </div>    
+    <div class="container-take-learn">
         <h3>Take a look inside</h3>
         <p>Te iisque labitur eos, nec sale argument scribentur no, augue disputando in vim. Erat fugit sit at, ius lorem deserunt deterruisset no.</p>
         <button class="btn-learn">Learn More</button>
-         </div>
-        </div>
+    </div>
 
-</div>
-<div class="section section-green">
     <div class="container-img">
         <div class="img-compu">
             <img src="assets/images/feature-1.png" alt="computer">
@@ -55,6 +52,5 @@
         <p>Dou suas detracto maiestatis ad, commodo lucilius invenire nec ad, eum et oratio disputationi. Falli lobortis his ad</p>
         <button class="btn-learn2">Learn More</button>
     </div>
-</div>
 </body>
 </html>
