avance de la mitad

--- a/index.html
+++ b/index.html
@@ -40,17 +40,19 @@
         <p>Te iisque labitur eos, nec sale argument scribentur no, augue disputando in vim. Erat fugit sit at, ius lorem deserunt deterruisset no.</p>
         <button class="btn-learn">Learn More</button>
     </div>
-
-    <div class="container-img">
+    <section class="section">
         <div class="img-compu">
-            <img src="assets/images/feature-1.png" alt="computer">
+            <img class="computer" src="assets/images/feature-1.png" alt="computer">
         </div>
-        <div class="img-table">
-            <img src="assets/images/feature-2.png" alt="table">
-        </div>
-        <h2>Safe and reliable</h2>
-        <p>Dou suas detracto maiestatis ad, commodo lucilius invenire nec ad, eum et oratio disputationi. Falli lobortis his ad</p>
-        <button class="btn-learn2">Learn More</button>
-    </div>
+        <section class="section green-section">
+            <div class="content">
+                <h2>Safe and reliable</h2>
+                <p>Dou suas detracto maiestatis ad, commodo lucilius invenire nec ad, eum et oratio disputationi. Falli lobortis his ad</p>
+                <button class="btn-learn2">Learn More</button>
+            </div>
+            <div class="img-table">
+                <img class="table" src="assets/images/feature-2.png" alt="table">
+            </div>
+        </section>    
 </body>
 </html>
