--- a/index.html
+++ b/index.html
@@ -1,58 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/index.css">
-    <link rel="shortcut icon" href="assets/bar-icon.png" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/index.css" />
+    <link rel="shortcut icon" href="assets/bar-icon.png" type="image/x-icon" />
     <title>web_page</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <img src="assets/images/banner-bk.jpg" alt="encabezado">
-        <div class="header-content">
-            <h1>A New Way<br>To Start Business</h1>
-            <p>Lorem ipsum dolor sit amet, id nec enim autem oblique, ei dico mentium duo.</p>
-            <p>Illum iusto laoreet his te. Lorem partiendo mel ex. Ad vitae admodum voluptatum per.</p>
-            <button class="start">Get Started</button>
-        </div>
+      <img src="assets/images/banner-bk.jpg" alt="encabezado" />
+      <div class="header-content">
+        <h1>A New Way<br />To Start Business</h1>
+        <p>
+          Lorem ipsum dolor sit amet, id nec enim autem oblique, ei dico mentium
+          duo.
+        </p>
+        <p>
+          Illum iusto laoreet his te. Lorem partiendo mel ex. Ad vitae admodum
+          voluptatum per.
+        </p>
+        <button class="start">Get Started</button>
+      </div>
     </header>
     <div class="container-selection">
-        <h1>Smartest protection for your site</h1>
-        <div class="container-anti-spam">
-            <img src="assets/images/smart-protect-1.jpg" alt="anti-spam">
-            <h2>Anti-spam</h2>
-            <p>Lorem ipsum dolor sit amet porro his no his deleniti.</p>
-        </div>
-        <div class="container-phishing-detect">
-            <img src="assets/images/smart-protect-2.jpg" alt="phishing-detect">
-            <h2>Phishing Detect</h2>
-            <p>Ne error antiopam usu. Sed vocen concludaturque ea.</p>
-        </div>
-        <div class="container-smart-scan">
-            <img src="assets/images/smart-protect-3.jpg" alt="smart-scan">
-            <h2>Smart Scan</h2>
-            <p>Et usum ocurreret elaboraret doctus prodesse assueverit.</p>
-        </div>
-    </div>    
+      <h1>Smartest protection for your site</h1>
+      <div class="container-anti-spam">
+        <img src="assets/images/smart-protect-1.jpg" alt="anti-spam" />
+        <h2>Anti-spam</h2>
+        <p>Lorem ipsum dolor sit amet porro his no his deleniti.</p>
+      </div>
+      <div class="container-phishing-detect">
+        <img src="assets/images/smart-protect-2.jpg" alt="phishing-detect" />
+        <h2>Phishing Detect</h2>
+        <p>Ne error antiopam usu. Sed vocen concludaturque ea.</p>
+      </div>
+      <div class="container-smart-scan">
+        <img src="assets/images/smart-protect-3.jpg" alt="smart-scan" />
+        <h2>Smart Scan</h2>
+        <p>Et usum ocurreret elaboraret doctus prodesse assueverit.</p>
+      </div>
+    </div>
     <div class="container-take-learn">
-        <h3>Take a look inside</h3>
-        <p>Te iisque labitur eos, nec sale argument scribentur no, augue disputando in vim. Erat fugit sit at, ius lorem deserunt deterruisset no.</p>
-        <button class="btn-learn">Learn More</button>
+      <h3>Take a look inside</h3>
+      <p>
+        Te iisque labitur eos, nec sale argument scribentur no, <br />
+        augue disputando in vim. Erat fugit sit at, ius lorem deserunt
+        deterruisset no.
+      </p>
+      <button class="btn-learn">Learn More</button>
     </div>
     <section class="section">
-        <div class="img-compu">
-            <img class="computer" src="assets/images/feature-1.png" alt="computer">
+      <div class="img-compu">
+        <img
+          class="computer"
+          src="assets/images/feature-1.png"
+          alt="computer"
+        />
+      </div>
+      <section class="section green-section">
+        <div class="img-table">
+          <img class="table" src="assets/images/feature-2.png" alt="table" />
         </div>
-        <section class="section green-section">
-            <div class="content">
-                <h2>Safe and reliable</h2>
-                <p>Dou suas detracto maiestatis ad, commodo lucilius invenire nec ad, eum et oratio disputationi. Falli lobortis his ad</p>
-                <button class="btn-learn2">Learn More</button>
-            </div>
-            <div class="img-table">
-                <img class="table" src="assets/images/feature-2.png" alt="table">
-            </div>
-        </section>    
-</body>
+        <div class="content">
+          <h2>Safe and reliable</h2>
+          <p>
+            Dou suas detracto maiestatis ad, commodo lucilius invenire nec ad,
+            eum et oratio disputationi. Falli lobortis his ad
+          </p>
+          <button class="btn-learn2">Learn More</button>
+        </div>
+      </section>
+    </section>
+<section class="prices">
+  <h2 class="pricing-title">Check our princing</h2>
+  <div class="pricing-container">
+    <div class="pricing-card">
+      <h2>STARTUP</h2>
+      <p class="price">\$0 <span>/ MO.</span></p>
+      <ul>
+        <li>Up to 5 Documents</li>
+        <li>Up to 3 Reviews</li>
+        <li>5 team Members</li>
+        <li>Limited Support</li>
+      </ul>
+      <button>Get Free</button>
+    </div>
+    <div class="pricing-card premium">
+      <h2>PREMIUM</h2>
+      <p class="price">\$10 <span>/ MO.</span></p>
+      <ul>
+        <li>Up to 15 Documents</li>
+        <li>Up to 10 Reviews</li>
+        <li>25 team Members</li>
+        <li>Limited Support</li>
+      </ul>
+      <button>Get Free</button>
+    </div>
+    <div class="pricing-card">
+      <h2>PROFESSIONAL</h2>
+      <p class="price">\$30 <span>/ MO.</span></p>
+      <ul>
+        <li>Unlimited Documents</li>
+        <li>Unlimited Reviews</li>
+        <li>Unlimited Members</li>
+        <li>Unlimited Support</li>
+      </ul>
+      <button>Get Free</button>
+    </div>
+  </div>
+<div class="container-img-row">
+      <img src="assets/images/client-1.png" alt="company">
+      <img src="assets/images/client-2.png" alt="c">
+      <img src="assets/images/client-3.png" alt="s">
+      <img src="assets/images/client-4.png" alt="tower">
+      <img src="assets/images/client-5.png" alt="logo">
+      <img src="assets/images/client-6.png" alt="company2">
+    </div> 
+</section>
+<div class="contact-section">
+  <div class="contact-info">
+      <h2>Contact Us</h2>
+      <p>Te iisque labitur eos, nec sale argumentum scribentur, augue disputando in vim. Erat fugit sit at, ius lorem.</p>
+      <br>
+      <p>Email: company_email@com</p>
+      <p>Phone: 361-688-5824</p>
+      <p>Address: 4826 White Avenue, Corpus Christi, Texas</p>
+  </div>
+  <div class="contact-form">
+      <form>
+          <div class="form-group">
+              <div class="form-field">
+                  <label for="name">Your Name</label>
+                  <input type="text" id="name" name="name" required>
+              </div>
+              <div class="form-field">
+                  <label for="email">Your Email</label>
+                  <input type="email" id="email" name="email" required>
+              </div>
+          </div>
+          <div class="form-field">
+              <label for="message">Message</label>
+              <textarea id="message" name="message" required></textarea>
+          </div>
+          <button type="submit">Submit</button>
+      </form>
+  </div>
+  <img src="assets/images/contact-bk.jpg" alt="img-form" class="background-image">
+</div>
+<footer>
+  <img src="assets/facebook.png" alt="facebook">
+  <img src="assets/twitter.png" alt="twitter">
+  <img src="assets/whatsapp.png" alt="whatsapp">
+  <img src="assets/email.png" alt="email">
+</footer>
+  </body>
 </html>
