--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <header>
+      <img src="assets/images/logo.png" alt="logo" class="logo">
       <img src="assets/images/banner-bk.jpg" alt="encabezado" />
+      
       <div class="header-content">
         <h1>A New Way<br />To Start Business</h1>
         <p>
@@ -149,6 +151,7 @@
   <img src="assets/images/contact-bk.jpg" alt="img-form" class="background-image">
 </div>
 <footer>
+  <p>Copyright 2024 Chen, Yi-Ya.</p>
   <img src="assets/facebook.png" alt="facebook">
   <img src="assets/twitter.png" alt="twitter">
   <img src="assets/whatsapp.png" alt="whatsapp">
